Clean up some warnings